# fct-vanitygen

./: .gitignore  Cargo.toml  readme.md
src/: address.rs  config.rs  files.rs  main.rs  matching.rs
