[package]
name = "vanity-address"
version = "0.1.0"
authors = ["Mitchell <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
sha2 = "0.8.0"
bs58 = "0.2.2"
ed25519-dalek = "0.9.1"
num-bigint = { version = "0.2.2", features = ["rand"] }
regex = "1.1.6"
clap = "2.33.0"