[package]
name = "fct-vanitygen"
version = "0.1.0"
authors = ["Mitchell <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Generates vanity addresses for the Factom protocol"
readme = "README.md"
homepage = "https://github.com/mitchellberry/fctutils/tree/master/fct-vanitygen"
repository = "https://github.com/mitchellberry/fctutils/tree/master/fct-vanitygen"
keywords = ["cli", "blockchain", "factom"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.6"
sha2 = "0.8.0"
bs58 = "0.2.2"
regex = "1.1.6"
clap = "2.33.0"
rayon = "1.0.3"
ed25519-dalek = "0.9.1"